add serach function

--- a/bio/MainPage.xaml
+++ b/bio/MainPage.xaml
@@ -3,11 +3,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    d:DesignHeight="300" d:DesignWidth="667" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk">
+    mc:Ignorable="d" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" Height="536" Width="854">
 
     <Grid x:Name="LayoutRoot" Background="White">
-        <sdk:DataGrid AutoGenerateColumns="True" Height="228" HorizontalAlignment="Left" Margin="31,25,0,0" Name="dataGridProducts" VerticalAlignment="Top" Width="616" DataContext="{Binding}" ItemsSource="{Binding}" />
-        <Button Content="全部" Height="23" HorizontalAlignment="Left" Margin="31,265,0,0" Name="buttonGetAllProducts" VerticalAlignment="Top" Width="75" Click="buttonGetAllProducts_Click" />
+        <sdk:DataGrid AutoGenerateColumns="True" Height="460" HorizontalAlignment="Left" Margin="31,29,0,0" Name="dataGridProducts" VerticalAlignment="Top" Width="798" DataContext="{Binding}" ItemsSource="{Binding}"></sdk:DataGrid>
+        <Button Content="搜索" Height="23" HorizontalAlignment="Left" Margin="242,495,0,0" Name="buttonSearchProducts" VerticalAlignment="Top" Width="75" Click="buttonSearchProducts_Click" />
+        <sdk:Label Height="28" HorizontalAlignment="Left" Margin="39,495,0,0" Name="labelSearch" VerticalAlignment="Top" Width="59" Content="搜索名称" />
+        <TextBox Height="23" HorizontalAlignment="Left" Margin="104,495,0,0" Name="textBoxSearchName" VerticalAlignment="Top" Width="120" KeyDown="textBoxSearchName_KeyDown" />
     </Grid>
 </UserControl>
